fix the header alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ header {
 
 .dropdownbtn {
     display: none;
-    width: 800px;
     height: 50px;
     border: none;
     color: white;
@@ -77,9 +76,10 @@ header nav ul {
     list-style-type: none;
 }
 
-a {
+header a {
     color: white;
     text-decoration: none;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 /* change the color and font weight of the navbar items when hovering */
@@ -106,6 +106,7 @@ header nav ul li {
 /* set up the english title */
 #englishTitle {
     font-size: 32px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin-top: 2px;
     margin-left: 5px;
 }
@@ -384,6 +385,7 @@ header nav ul li {
         line-height: 1.5;
         background-color: darkgreen;
         color: white;
+        font-family: Georgia, 'Times New Roman', Times, serif;
         display: flex;
         flex-wrap: wrap-reverse;
         flex-direction: column;
@@ -396,8 +398,6 @@ header nav ul li {
     #enfooter {
         font-size: 14px;
     }
-
-
 
 /* more mobile responsive */
 @media screen and (max-width: 768px) {
